--- a/src/ventanas/VentanaLogin.form
+++ b/src/ventanas/VentanaLogin.form
@@ -39,7 +39,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="90" y="150" width="220" height="-1"/>
+          <AbsoluteConstraints x="0" y="150" width="400" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -89,11 +89,12 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="14" style="0"/>
         </Property>
+        <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="Aplicaci&#xf3;n de Java &#xa9; 2025"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="120" y="540" width="220" height="20"/>
+          <AbsoluteConstraints x="0" y="540" width="400" height="20"/>
         </Constraint>
       </Constraints>
     </Component>
@@ -185,7 +186,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="90" y="70" width="220" height="90"/>
+          <AbsoluteConstraints x="0" y="70" width="400" height="90"/>
         </Constraint>
       </Constraints>
     </Component>
